Update to version v0.14.3-lamelos

--- a/nvd3/templates/linechart.html
+++ b/nvd3/templates/linechart.html
@@ -39,6 +39,10 @@
     {{super()}}
     {% endblock custoattr %}
 
+    {% block y_axis_scale %}
+    {{ super() }}
+    {% endblock y_axis_scale %}
+
     {% block inject %}
     {{ super() }}
     {% endblock inject %}
