--- a/nvd3/templates/linechart.html
+++ b/nvd3/templates/linechart.html
@@ -39,6 +39,10 @@
     {{super()}}
     {% endblock custoattr %}
 
+    {% block x_axis_scale %}
+    {{ super() }}
+    {% endblock x_axis_scale %}
+
     {% block y_axis_scale %}
     {{ super() }}
     {% endblock y_axis_scale %}
