--- a/nvd3/templates/discretebarchart.html
+++ b/nvd3/templates/discretebarchart.html
@@ -24,6 +24,14 @@
     {{super()}}
     {% endblock custoattr %}
 
+    {% block x_axis_scale %}
+    {{ super() }}
+    {% endblock x_axis_scale %}
+
+    {% block y_axis_scale %}
+    {{ super() }}
+    {% endblock y_axis_scale %}
+
     {% block inject %}
     {{ super() }}
     {% endblock inject %}
